fix(tabs): hide horizontal scrollbar (Firefox)

--- a/src/components/navigation/tabs/Tabs.module.scss
+++ b/src/components/navigation/tabs/Tabs.module.scss
@@ -30,6 +30,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
 
     &::-webkit-scrollbar {
         display: none;
